# dj-walks-into-bar

./: .env.example  .gitignore  .isort.cfg  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  shell.py
alembic/: README.md  env.py
alembic/versions/: 20201206-1159--f77ddcc85715--create_table_simplemodel.py  20201206-1231--c4f8ca61426a--create_table_simplemo.py
src/: database.py  models.py
src/settings/: getters.py
tests/: conftest.py  factories.py  test_models.py  test_queries.py
